syntax = "proto3";

package piston;

message CompressRequest {
  bytes data = 1;
}

message CompressResponse {
  bytes data = 1;
  uint32 count = 2;
  repeated int64 tree = 3;
}

message DecompressRequest {
  bytes data = 1;
  uint32 count = 2;
  repeated int64 tree = 3;
}

message DecompressResponse {
  bytes data = 1;
}

service Piston {
  rpc Compress(CompressRequest) returns (CompressResponse) {}
  rpc Decompress(DecompressRequest) returns (DecompressResponse) {}
}
